--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "clean": "cd android; ./gradlew clean; cd ..",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
