--- a/package.json
+++ b/package.json
@@ -34,5 +34,15 @@
   },
   "engines": {
     "node": ">=16"
+  },
+  "expo": {
+    "autolinking": {
+      "exclude": [
+        "expo-application",
+        "expo-constants",
+        "expo-file-system",
+        "expo-font"
+      ]
+    }
   }
 }
