--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "expo": "^49.0.0",
+    "expo-updates": "~0.18.16",
     "react": "18.2.0",
     "react-native": "0.72.5"
   },
