--- a/app.json
+++ b/app.json
@@ -13,6 +13,9 @@
     "runtimeVersion": "1.0.0",
     "updates": {
       "url": "http://localhost:3000/api/manifest"
-    }
+    },
+    "plugins": [
+      "expo-localization"
+    ]
   }
 }
