--- a/package.json
+++ b/package.json
@@ -11,10 +11,43 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.5.1",
+    "@notifee/react-native": "^7.8.0",
+    "@react-native-community/netinfo": "^9.4.1",
+    "@react-native-firebase/app": "^17.4.3",
+    "@react-native-firebase/crashlytics": "^17.4.3",
+    "@react-native-firebase/messaging": "^17.4.3",
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/native-stack": "^6.9.14",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@shopify/flash-list": "^1.6.1",
+    "async-mutex": "^0.4.0",
+    "dayjs": "^1.11.10",
     "expo": "^49.0.0",
+    "expo-image": "~1.3.4",
+    "expo-keep-awake": "~12.3.0",
+    "expo-localization": "~14.3.0",
+    "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.16",
+    "i18n-js": "^4.3.2",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-error-boundary": "^4.0.11",
+    "react-native": "0.72.5",
+    "react-native-gesture-handler": "^2.13.1",
+    "react-native-image-crop-picker": "^0.40.0",
+    "react-native-keyboard-controller": "^1.8.0",
+    "react-native-mmkv": "^2.10.2",
+    "react-native-modal-dropdown": "^1.0.2",
+    "react-native-network-logger": "^1.15.0",
+    "react-native-pressable-scale": "^2.1.0",
+    "react-native-reanimated": "^3.5.4",
+    "react-native-safe-area-context": "^4.7.2",
+    "react-native-screens": "^3.25.0",
+    "react-native-toast-message": "^2.1.6",
+    "react-native-vector-icons": "^10.0.0",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
