--- a/package.json
+++ b/package.json
@@ -4,11 +4,23 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "build-apk": "cd android; ./gradlew assembleRelease; cd ..",
+    "bundle-ios": "npx react-native bundle --entry-file ./index.js --platform ios --bundle-output ios/main.jsbundle --assets-dest ios",
     "clean": "cd android; ./gradlew clean; cd ..",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
+    "lint": "eslint . --fix --ext .js,.jsx,.ts,.tsx",
+    "postinstall": "husky install && patch-package",
+    "prepare": "husky install",
     "start": "react-native start",
     "test": "jest"
+  },
+  "lint-staged": {
+    "src/*.{ts,tsx,js,jsx}": [
+      "eslint --fix"
+    ],
+    "index.js": [
+      "eslint --fix"
+    ]
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.5.1",
@@ -56,15 +68,45 @@
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/i18n-js": "^3.8.6",
     "@types/react": "^18.0.24",
+    "@types/react-native-modal-dropdown": "^1.0.2",
+    "@types/react-native-vector-icons": "^6.4.15",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
     "babel-jest": "^29.2.1",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^8.19.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.2.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-native": "^4.1.0",
+    "husky": "^8.0.3",
     "jest": "^29.2.1",
+    "lint-staged": "^14.0.1",
     "metro-react-native-babel-preset": "0.76.8",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.4.1",
+    "pretty-quick": "^3.1.3",
+    "react-native-flipper": "^0.212.0",
     "react-test-renderer": "18.2.0",
+    "redux-flipper": "^2.0.2",
     "typescript": "4.8.4"
+  },
+  "prettier": {
+    "bracketSameLine": false,
+    "bracketSpacing": true,
+    "printWidth": 90,
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "all"
   },
   "engines": {
     "node": ">=16"
