chore!: upgrade to RN 0.73 (only-RN side, untested)
BREAKING CHANGE(ios): bump minimum deployment to 13.4

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
   },
   "exclude": ["node_modules"],
   "include": ["index.js", "src", "test"],
-  "extends": "expo/tsconfig.base"
+  "extends": "@react-native/typescript-config/tsconfig.json"
 }
