--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "i18n-js": "^4.3.2",
     "react": "18.2.0",
     "react-error-boundary": "^4.0.11",
-    "react-native": "0.72.8",
+    "react-native": "0.73.1",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-keyboard-controller": "^1.8.0",
@@ -64,11 +64,13 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native/eslint-config": "^0.72.2",
-    "@react-native/metro-config": "^0.72.11",
+    "@react-native/babel-preset": "^0.73.18",
+    "@react-native/eslint-config": "^0.73.1",
+    "@react-native/metro-config": "^0.73.2",
+    "@react-native/typescript-config": "^0.73.1",
+    "@types/react": "^18.2.6",
     "@tsconfig/react-native": "^3.0.0",
     "@types/i18n-js": "^3.8.6",
-    "@types/react": "^18.0.24",
     "@types/react-native-modal-dropdown": "^1.0.2",
     "@types/react-native-vector-icons": "^6.4.15",
     "@types/react-test-renderer": "^18.0.0",
@@ -87,17 +89,17 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-native": "^4.1.0",
     "husky": "^8.0.0",
-    "jest": "^29.2.1",
+    "jest": "^29.6.3",
+    "prettier": "2.8.8",
     "lint-staged": "^14.0.1",
     "metro-react-native-babel-preset": "0.76.8",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
-    "prettier": "^2.4.1",
     "pretty-quick": "^3.1.3",
     "react-native-flipper": "^0.212.0",
     "react-test-renderer": "18.2.0",
     "redux-flipper": "^2.0.2",
-    "typescript": "4.8.4"
+    "typescript": "^5.1.3"
   },
   "prettier": {
     "bracketSameLine": false,
@@ -108,7 +110,7 @@
     "trailingComma": "all"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   },
   "expo": {
     "autolinking": {
