--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.5.1",
     "@notifee/react-native": "^7.8.0",
-    "@react-native-community/netinfo": "^9.4.1",
+    "@react-native-community/netinfo": "11.1.0",
     "@react-native-firebase/app": "^17.4.3",
     "@react-native-firebase/crashlytics": "^17.4.3",
     "@react-native-firebase/messaging": "^17.4.3",
@@ -35,11 +35,11 @@
     "@shopify/flash-list": "^1.6.1",
     "async-mutex": "^0.4.0",
     "dayjs": "^1.11.10",
-    "expo": "^49.0.0",
-    "expo-image": "~1.3.4",
-    "expo-keep-awake": "~12.3.0",
-    "expo-localization": "~14.3.0",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^50.0.0-canary-20231205-250b31f",
+    "expo-image": "0.0.1-canary-20231205-250b31f",
+    "expo-keep-awake": "0.0.1-canary-20231205-250b31f",
+    "expo-localization": "0.0.1-canary-20231205-250b31f",
+    "expo-status-bar": "0.0.1-canary-20231205-250b31f",
     "i18n-js": "^4.3.2",
     "react": "18.2.0",
     "react-error-boundary": "^4.0.11",
@@ -52,8 +52,8 @@
     "react-native-network-logger": "^1.15.0",
     "react-native-pressable-scale": "^2.1.0",
     "react-native-reanimated": "^3.5.4",
-    "react-native-safe-area-context": "^4.7.2",
-    "react-native-screens": "^3.25.0",
+    "react-native-safe-area-context": "4.7.4",
+    "react-native-screens": "~3.27.0",
     "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^10.0.0",
     "react-redux": "^8.1.3",
@@ -68,9 +68,9 @@
     "@react-native/eslint-config": "^0.73.1",
     "@react-native/metro-config": "^0.73.2",
     "@react-native/typescript-config": "^0.73.1",
-    "@types/react": "^18.2.6",
     "@tsconfig/react-native": "^3.0.0",
     "@types/i18n-js": "^3.8.6",
+    "@types/react": "^18.2.6",
     "@types/react-native-modal-dropdown": "^1.0.2",
     "@types/react-native-vector-icons": "^6.4.15",
     "@types/react-test-renderer": "^18.0.0",
@@ -90,11 +90,11 @@
     "eslint-plugin-react-native": "^4.1.0",
     "husky": "^8.0.0",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
     "lint-staged": "^14.0.1",
     "metro-react-native-babel-preset": "0.76.8",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
+    "prettier": "2.8.8",
     "pretty-quick": "^3.1.3",
     "react-native-flipper": "^0.212.0",
     "react-test-renderer": "18.2.0",
