--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-native": "0.73.1",
+    "react-native-config": "^1.5.1",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-keyboard-controller": "^1.8.0",
