--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,6 +4,12 @@ apply plugin: "com.facebook.react"
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 
+project.ext.envConfigFiles = [
+   productionDebug: ".env.production",
+   productionRelease: ".env.production",
+   qaDebug: ".env.qa",
+   qaRelease: ".env.qa"
+]
 apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
 
 /**
@@ -77,6 +83,17 @@ android {
     ndkVersion rootProject.ext.ndkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
+
+    flavorDimensions "default"
+    productFlavors {
+        production {
+            applicationId "com.starter"
+        }
+        qa {
+            applicationId "com.starter.qa"
+            versionNameSuffix "-qa"
+        }
+    }
 
     namespace "com.starter"
     defaultConfig {
