--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "build-apk": "cd android; ./gradlew assembleRelease; cd ..",
+    "android:qa": "react-native run-android --mode=qaDebug",
+    "android:qa:release": "react-native run-android --mode=qaRelease",
+    "android:prod": "react-native run-android --mode=productionDebug",
+    "android:prod:release": "react-native run-android --mode=productionRelease",
+    "build:qa": "cd android; ENVFILE=.env.qa ./gradlew assembleQaRelease; cd ..",
+    "build:prod": "cd android; ENVFILE=.env.production ./gradlew assembleProductionRelease; cd ..",
+    "build:aab": "cd android; ENVFILE=.env.production ./gradlew bundleProductionRelease; cd ..",
+    "ios:qa": "ENVFILE=.env.qa react-native run-ios --scheme 'StarterQA'",
+    "ios:prod": "ENVFILE=.env.production react-native run-ios --scheme 'Starter'",
     "bundle-ios": "npx react-native bundle --entry-file ./index.js --platform ios --bundle-output ios/main.jsbundle --assets-dest ios",
     "clean": "cd android; ./gradlew clean; cd ..",
     "ios": "react-native run-ios",
